# c-icap-leaf

./: COPYING  Makefile.in  README  README.md  aclocal.m4  autoconf.h.in  autoconf.h.in~  c-icap-leaf-0.5.X.spec  c-icap.leaf.defaults  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
modules/: Makefile.in
services/: Makefile.am  Makefile.in
services/leaf/: Makefile.am  Makefile.in  makefile.w32  srv_leaf.c  srv_leaf.h  srv_license.c  srv_main.c  srv_stats.h  srv_strstr.c  srv_strstr.h
services/leafinfo/: Makefile.am  Makefile.in  leafinfo.c  makefile.w32
